--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -58,7 +58,10 @@
 div.answer_form{
   border: 1px  solid rgb(179, 179, 179);
   margin-bottom: 15px;
-  padding: 10px;
+  padding-left: 45px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: -30px;
   width: 95%;
   margin-left: calc(100%/50);
 }  
