--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -78,13 +78,13 @@
                 {% csrf_token %}
                 <textarea class="question" name="question" rows="10" style="width:100%;"
                 placeholder="질문을 입력해주세요."></textarea><br>
-                <table style="border:none; margin-top: -20px; width: 95%;">
+                <table style="border:none; width: 100%;">
                     <tr>
                         <td>
                             <input type="file" name="question_file" style="border: none; font-weight: 400;margin-bottom: 10px;" multiple>
                         </td>
                         <td>
-                            <input class="button" style="margin-left: 95%; font-weight: 400;margin-bottom:10px; width: 55px;" type="submit" value="등록">         
+                            <input class="button" style="margin-left: 70%; font-weight: 400;margin-bottom:10px; width: 55px;" type="submit" value="등록">         
                         </td>
                     </tr>
                     <output id="list"></output>
@@ -112,7 +112,7 @@
                         <div id="filedelete" class="filedelete"></div>
                         {% if question.asker == user %}
                             <div id="buttonpanel{{ question.id }}" name="revise">
-                                <table  style="border:none; margin-top: 7px; margin-left: 73%;font-size: 14px; font-weight: 300;">
+                                <table  class="ModifyDeleteBox" style="border:none; margin-top: 7px; margin-left: 71%;font-size: 14px; font-weight: 300; margin-right: 7%;">
                                     <tr>
                                         <td>
                                             <a style="font-size: 14px;margin-right: 5px;color: rgb(71, 71, 71)">{{ question.pub_date }}</a>
@@ -136,7 +136,7 @@
                         <input type="hidden" value="{{ question.id }}" name="question_id">
                         <textarea style="margin-top:20px;margin-bottom: 10px; width:93%;height: 30%;" class="answer" name="answer" rows="2"
                                   placeholder="답변을 입력해주세요."></textarea>
-                        <input type="submit" class="button" style="margin-left: 87%; margin-top: -50px;margin-bottom:10px; width: 50px; font-weight: 400; font-size: 14px;" value="등록">
+                        <input type="submit" id="SubmitButton"class="button" style="margin-left: 87%; margin-top: -50px;margin-bottom:10px; width: 60px; font-weight: 400; font-size: 14px;" value="등록">
                     </form>
 
                     {% for answer in question.answers.all %}
