Added test pages link on navbar

--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -46,7 +46,8 @@
                 <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
                 <a class="nav-item nav-link " href="{% url 'homeworklist' %}">Homework</a>
                 <a class="nav-item nav-link " href="{% url 'QnA' %}">QnA</a>
-                <a class="nav-item nav-link " href="{% url 'main' %}">Hw_main</a>
+                <a class="nav-item nav-link " href="{% url 'hw_main' %}">과제제출(new)</a>
+                <a class="nav-item nav-link " href="{% url 'main' %}">과제관리(new)</a>
                 {% else %}
                 <a class="nav-item nav-link " href="{% url 'home' %}">
                     Home </a>
