fixed submit button tag

--- a/hw/templates/hw_detail.html
+++ b/hw/templates/hw_detail.html
@@ -55,7 +55,7 @@
                 {#                    <input name="submission_files" type="file" id="ex_file" multiple>#}
             </div>
             <div id="file_list"></div>
-            <input type="submit" value="수정" />
+            <button class="btn btn-secondary" type="submit">수정</button>
         </form>
     </div>
 
@@ -71,7 +71,7 @@
                 <input name="submission_files" type="file" id="ex_file" multiple>
             </div>
             <div id="file_list"></div>
-            <input type="submit" value="제출" />
+            <button class="btn btn-secondary" type="submit">제출</button>
         </form>
     </div>
     {% endif %}
