--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -67,13 +67,13 @@ div.answer_form{
 }  
 button{
   text-align: center;
-  font-weight: bold;
+  font-weight: 300;
   border: 0.5px solid black;
   width: 50px;
 }
 input{
   text-align: center;
-  font-weight: bold;
+  font-weight: 400;
   border: 0.5px solid black;
 }
 
@@ -189,14 +189,23 @@ table{
     }
 
 
-.UploadQuestion{
+table.UploadQuestion{
   border:none !important;
   width: 100%;
+  font-weight: 300 !important;
 }
+
 input.button{
   position: relative;
 }
-
+input.SubmitButton{
+  margin-left: 87%; 
+  margin-top: -50px;
+  margin-bottom:10px; 
+  width: 60px; 
+  font-weight: 400; 
+  font-size: 14px;
+}
 input.SendButton{
   margin-left: 70%; 
   font-weight: 400;
@@ -226,6 +235,23 @@ a.QuestionPubDate{
   color: rgb(71, 71, 71);
 }
 
+a.QuestionFiles{
+  color: rgb(151, 151, 151);
+  font-size: 13px; 
+  font-weight: 300;
+}
+div.QuestionContent{
+  width:fit-content; 
+  font-size: 15px; 
+  width: 93%;
+}
+
+textarea.answer{
+  margin-top:20px;
+  margin-bottom: 10px; 
+  width:93%;
+  height: 30%;
+}
 
 @media screen and (min-width: 2560px){
   input.SubmitButton{
