--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -11,80 +11,95 @@
     {% block link %}{% static 'stacklion/css/QnA.css' %}{% endblock %}
     {% block title %}Likelion Camp{% endblock %}
     {% block jqueryscript %}
-        <script type="text/javascript">
-            $(document).ready(function () {
-                {% if top %}
-                    $('html').animate({{ top }}, 400)
-                    {#scrollTop: ({{ top }}, 400);#}
-                {% endif %}
-            })
+    <script type="text/javascript">
+        $(document).ready(function () {
+            {
+                %
+                if top %
+            }
+            $('html').animate({
+                {
+                    top
+                }
+            }, 400) {
+                #
+                scrollTop: ({
+                    {
+                        top
+                    }
+                }, 400);#
+            } {
+                % endif %
+            }
+        })
 
-            $(document).on('click', '.filedelete', function (item) {
-                var fileid = $(this).attr('id');
-                console.log(fileid);
-                $('#filedelete').append('<input type="hidden" value="' + fileid + '" name="filedelete" />');
-                $('#div' + fileid).remove();
-            })
+        $(document).on('click', '.filedelete', function (item) {
+            var fileid = $(this).attr('id');
+            console.log(fileid);
+            $('#filedelete').append('<input type="hidden" value="' + fileid + '" name="filedelete" />');
+            $('#div' + fileid).remove();
+        })
 
-            $(document).on('click', '.revise', function () {
-                var id = $(this).attr("id");
-                var content = $('#question_content' + id).html();
-                var top = $('#question_content' + id).position().top;
-                var inner_div_files = ""
-                var files = $('.question_file' + id).each(function (index, item) {
-                    inner_div_files += '<div id="div' + $(item).attr('id') + '">' + $(item).html() +
-                        '<button id="' + $(item).attr('id') +
-                        '" class="filedelete" type="button">삭제</button><br></div>'
-                });
-                console.log(files);
-                $('#div_files').replaceWith(inner_div_files);
-
-                $('#question_content' + id).replaceWith('<textarea name="revise" id="textarea' + id + '">' +
-                    content + '</textarea>');
-                $('#buttonpanel' + id).html('<button type="button" id="' + id +
-                    '" class="button cancel" value="취소">취소</button>\n' +
-                    '                        <button name="submit" type="submit" id="' + id +
-                    '" class="button complete" value="확인">확인</button>' +
-                    '<input type="hidden" name="scrolltop" value="' + top + '"/>');
-            })
-
-            $(document).on('click', '.cancel', function () {
-                var id = $(this).attr("id");
-                console.log(id);
-                var content = $('#textarea' + id).html();
-                console.log(content);
-
-                $('#textarea' + id).replaceWith('<div id="question_content' + id + '">' + content + '</div>');
-                $('#buttonpanel' + id).html('<button type="button" id="' + id +
-                    '" class="button revise" value="수정">수정</button>\n' +
-                    '                        <button type="submit" id="' + id +
-                    '" class="button delete" value="삭제">삭제</button>');
-
+        $(document).on('click', '.revise', function () {
+            var id = $(this).attr("id");
+            var content = $('#question_content' + id).html();
+            var top = $('#question_content' + id).position().top;
+            var inner_div_files = ""
+            var files = $('.question_file' + id).each(function (index, item) {
+                inner_div_files += '<div id="div' + $(item).attr('id') + '">' + $(item).html() +
+                    '<button id="' + $(item).attr('id') +
+                    '" class="filedelete" type="button">삭제</button><br></div>'
             });
-        </script>
+            console.log(files);
+            $('#div_files').replaceWith(inner_div_files);
+
+            $('#question_content' + id).replaceWith('<textarea name="revise" id="textarea' + id + '">' +
+                content + '</textarea>');
+            $('#buttonpanel' + id).html('<button type="button" id="' + id +
+                '" class="button cancel" value="취소">취소</button>\n' +
+                '                        <button name="submit" type="submit" id="' + id +
+                '" class="button complete" value="확인">확인</button>' +
+                '<input type="hidden" name="scrolltop" value="' + top + '"/>');
+        })
+
+        $(document).on('click', '.cancel', function () {
+            var id = $(this).attr("id");
+            console.log(id);
+            var content = $('#textarea' + id).html();
+            console.log(content);
+
+            $('#textarea' + id).replaceWith('<div id="question_content' + id + '">' + content + '</div>');
+            $('#buttonpanel' + id).html('<button type="button" id="' + id +
+                '" class="button revise" value="수정">수정</button>\n' +
+                '                        <button type="submit" id="' + id +
+                '" class="button delete" value="삭제">삭제</button>');
+
+        });
+    </script>
     {% endblock %}
 </head>
 
 {% block content %}
-    <body>
+
+<body>
     <!--header html-->
     <div class="shell">
         <header class="shell-header">
             <h1 style="text-align: center;">질문과 답변</h1>
         </header>
         <main class="shell-body">
-            <h2>{{ user.name }}님, 무엇이 궁금하신가요?</h2> 
+            <h2>{{ user.name }}님, 무엇이 궁금하신가요?</h2>
             <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <textarea class="question" name="question" rows="10" style="width:100%;"
-                placeholder="질문을 입력해주세요."></textarea><br>
-                <table id="UploadQuestion">
+                    placeholder="질문을 입력해주세요."></textarea><br>
+                <table class="UploadQuestion">
                     <tr>
                         <td>
-                            <input type="file" name="question_file" id="FileButton" multiple>
+                            <input type="file" name="question_file" class="FileButton" multiple>
                         </td>
                         <td>
-                            <input class="button" id="SendButton"  type="submit" value="등록">         
+                            <input class="button" id="SendButton" type="submit" value="등록">
                         </td>
                     </tr>
                     <output id="list"></output>
@@ -94,65 +109,68 @@
         <!--footer html-->
         <footer class="shell-footer">
             {% for question in questions.all reversed %}
-                <div id="{{ question.id }}" class="answer_form">
-                    <h4 style="color: #FD6585;"> <span class="asker"> {{ question.asker }} </span>님의 질문</h4>
-                    <form action="{% url 'QnA' %}" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="id" value="{{ question.id }}"/>
-                        <div id="question_content{{ question.id }}" style="width:fit-content; font-size: 15px; width: 93%;">{{ question.question_content }}
+            <div id="{{ question.id }}" class="answer_form">
+                <h4 style="color: #FD6585;"> <span class="asker"> {{ question.asker }} </span>님의 질문</h4>
+                <form action="{% url 'QnA' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="id" value="{{ question.id }}" />
+                    <div id="question_content{{ question.id }}" class="QuestionContent">
+                        {{ question.question_content }}
+                    </div>
+                    <div id="div_files">
+                        {% for qfile in question.files.all %}
+                        <div>
+                            <a class="QuestionFiles" class="question_file{{ question.id }}" id="{{ qfile.id }}" href="{{ qfile.file.url }}"
+                                download="" value=""><span class="icon solid fas fa-file"> {{ qfile.file }}</span></a>
                         </div>
-                        <div id="div_files">
-                            {% for qfile in question.files.all %}
-                                <div>
-                                    <a class="question_file{{ question.id }}" id="{{ qfile.id }}" href="{{ qfile.file.url }}"
-                                       download="" value="" style="color: rgb(151, 151, 151); font-size: 13px; font-weight: lighter;"><span class="icon solid fas fa-file"> {{ qfile.file }}</span></a>
-                                </div>
-                            {% endfor %}
-                        </div>
-                        <div id="filedelete" class="filedelete"></div>
-                        {% if question.asker == user %}
-                            <div id="buttonpanel{{ question.id }}" name="revise">
-                                <table  class="ModifyDeleteBox">
-                                    <tr>
-                                        <td>
-                                            <a id="QuestionPubDate">{{ question.pub_date }}</a>
-                                        </td>
-                                        <td>
-                                            <button type="button" id="{{ question.id }}" class="button revise" value="수정" style="font-weight: 400;"> 수정 </button>
-                                        </td>
-                                        <td>
-                                            <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제" style="font-weight: 400;"> 삭제 </button>
-                                        </td>
-                                    </tr>
-                                </table>
+                        {% endfor %}
+                    </div>
+                    <div id="filedelete" class="filedelete"></div>
+                    {% if question.asker == user %}
+                    <div id="buttonpanel{{ question.id }}" name="revise">
+                        <table class="ModifyDeleteBox">
+                            <tr>
+                                <td>
+                                    <a id="QuestionPubDate">{{ question.pub_date }}</a>
+                                </td>
+                                <td>
+                                    <button type="button" id="{{ question.id }}" class="button revise" value="수정"
+                                        style="font-weight: 400;"> 수정 </button>
+                                </td>
+                                <td>
+                                    <button name="submit" type="submit" id="{{ question.id }}" class="button delete"
+                                        value="삭제" style="font-weight: 400;"> 삭제 </button>
+                                </td>
+                            </tr>
+                        </table>
 
-                            </div>
-                        {% endif %}
-                    </form>
+                    </div>
+                    {% endif %}
+                </form>
 
-                    <form action="{% url 'refresh' %}" method="post">
-                        {% csrf_token %}
-                        <input type="hidden" name="val" value="answer" />
-                        <input type="hidden" value="{{ question.id }}" name="question_id">
-                        <textarea style="margin-top:20px;margin-bottom: 10px; width:93%;height: 30%;" class="answer" name="answer" rows="2"
-                                  placeholder="답변을 입력해주세요."></textarea>
-                        <input type="submit" id="SubmitButton"class="button" style="margin-left: 87%; margin-top: -50px;margin-bottom:10px; width: 60px; font-weight: 400; font-size: 14px;" value="등록">
-                    </form>
+                <form action="{% url 'refresh' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="val" value="answer" />
+                    <input type="hidden" value="{{ question.id }}" name="question_id">
+                    <textarea class="answer"
+                        name="answer" rows="2" placeholder="답변을 입력해주세요."></textarea>
+                    <input type="submit" class="SubmitButton" class="button" value="등록">
+                </form>
 
-                    {% for answer in question.answers.all %}
-                        <div name="comment" style="margin:5px;">
-                            <h4 style="color:#0D25B9 ;">답변</h4>
-                            <a style=" font-weight: bold;">【</a><a style=" font-weight: bold;">{{ answer.answerer }}</a><a
-                                style=" font-weight: bold;">】</a>
-                            {{ answer.answer_content }}
-                        </div>
-                    {% endfor %}
+                {% for answer in question.answers.all %}
+                <div name="comment" style="margin:5px;">
+                    <h4 style="color:#0D25B9 ;">답변</h4>
+                    <a style=" font-weight: bold;">【</a><a style=" font-weight: bold;">{{ answer.answerer }}</a><a
+                        style=" font-weight: bold;">】</a>
+                    {{ answer.answer_content }}
                 </div>
+                {% endfor %}
+            </div>
 
             {% endfor %}
         </footer>
     </div>
-    </body>
+</body>
 {% endblock %}
 
 </html>
