--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -188,20 +188,11 @@ table{
       float: right;
     }
 
-
-table.UploadQuestion{
-  border:none !important;
-  width: 100%;
-  font-weight: 300 !important;
-}
-
 input.button{
   position: relative;
 }
 input.SubmitButton{
-  margin-left: 87%; 
-  margin-top: -50px;
-  margin-bottom:10px; 
+  margin-bottom:10px;
   width: 60px; 
   font-weight: 400; 
   font-size: 14px;
@@ -249,8 +240,12 @@ div.QuestionContent{
 textarea.answer{
   margin-top:20px;
   margin-bottom: 10px; 
-  width:93%;
+  width: 100%;
   height: 30%;
+}
+
+.answer-wrap{
+  width: 93%;
 }
 
 @media screen and (min-width: 2560px){
