--- a/page/static/page/css/home.css
+++ b/page/static/page/css/home.css
@@ -2949,7 +2949,7 @@ input, select, textarea {
 		background-attachment: fixed;
 		background-image: url("images/lion.jpg");
 		background-position: top left;
-		background-size: auto;
+		background-size: cover;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
@@ -3145,7 +3145,7 @@ input, select, textarea {
 		background-attachment: fixed;
 		background-image: url("images/lion.jpg");
 		background-position: top left;
-		background-size: auto;
+		background-size: cover;
 		text-align: center;
 	}
 
